Ensure role is compatible with Python 3

--- a/templates/exports.j2
+++ b/templates/exports.j2
@@ -1,4 +1,4 @@
-{% for key, value in nfs_shares.iteritems() %}
+{% for key, value in nfs_shares.items() %}
 {{ key }} {% for access in value %} {{ access.host }}({{ access.options | default("ro,all_squash") }}){% endfor %}
 
 {% endfor %}
